TRINO 480 port